fix: 加固生产安全边界